--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 
 }
 
@@ -12,10 +13,7 @@ home-page-main-section styles start
     background-color: #2D25A0;
       
 }
-main{
-    width: 100%;
-   
-}
+
 .home-page{
     display: flex;
     height: 660px;
@@ -46,10 +44,10 @@ main{
       
 }
 .home-btn:hover{
-    color: rgb(8, 15, 2);
-    background-image: linear-gradient(rgba(233, 233, 38, 0.651), rgb(255, 60, 0));
-    border-radius: 20px;
-    transition: 2s ease-in-out;
+    color: rgb(255, 255, 255);
+    background: #ad144d;
+    /* border-radius: 20px; */
+    transition: 0.5s ease-in-out;
 }
 .home-btn i{
 padding-left: 15px;
@@ -70,34 +68,38 @@ home-page-main-section styles end
 /*--------------------------
  players list styles start
 ----------------------------*/
+
 #player-page{
- 
-  
-  
-
-
+    flex-direction: column;
+    align-items: center;
 }
 .players{
-    margin-left: 170px;
-    margin-right: 215px;
+    margin-left: 125px;
+    margin-right: 210px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap:30px;
+    text-align: center;
+    align-items: center;
+ 
        
 }
 
 
 .player{
     
-    width: 300px;
+    width: 330px;
     box-shadow: 3px 3px 3px 3px #dfdede;
     padding: 15px;
+    align-items: center;
+    justify-content: center;
        
 }
 
 .player-banner img{
-    width: 300px;
+    width: 100%;
     height: 256px;
+    border-radius: 5px;
     
 }
 .player-info h2{
@@ -125,6 +127,7 @@ home-page-main-section styles end
     margin-left: 475px;
     margin-right: 482px;
     margin-bottom: 64px;
+    padding-bottom: 50px;
   
     
     
@@ -146,12 +149,8 @@ home-page-main-section styles end
      justify-content: center;
      align-items: center;
      height: 32px;
-     padding: 10px;
-     
-    
+     padding: 10px;   
  }
-
- 
 
  .sports-icoc i{
    padding:10px; 
@@ -163,9 +162,9 @@ home-page-main-section styles end
    
 }
 
-
  .sports-info p{
      text-align: center;
+     margin-bottom: 50px;
      
  }
 
@@ -173,5 +172,98 @@ home-page-main-section styles end
  sports website footer styles end     
  ----------------------------------------  */
 
+/*----------------------
+    tableat devices 
+-------------------------*/
+  @media (max-width:768px) {
 
-  
+    .home-page{
+        display: flex;
+        height: 276px;
+        align-items: center;
+        margin-left: 46px;
+        margin-right: 230px;
+        margin-bottom: 25px;
+    }
+      .home-right img{
+          margin-left: 15px;
+          width: 300px;
+          
+      }
+      .home-left h1{
+          margin-left: 0;
+          font-size: 25px;
+      }
+      .home-left button {  
+        width: 112px;
+        height: 35px;
+        font-size: 12px;
+
+    }
+   
+      .players{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        padding: 15px;
+        margin-left: 30px;
+        margin-right: 0;
+        grid-gap: 10px;
+        position: relative;
+      }
+      .player{
+          width: 70%;
+          padding: 15px;
+          margin-left: 30px;
+         
+      }
+      .sports-info {
+        margin-left: 0; 
+        margin-right: 0;
+        margin-bottom: 0;
+        text-align: center;
+    }
+      
+      
+  }
+  /*------------------------
+    mobail devices
+  --------------------------*/
+
+  @media (max-width:360px) {
+    .home-left h1{
+        
+        font-size: 15px;
+
+    }
+    .home-right img{
+        margin-left: 100px;
+        width: 160px;
+        
+    }
+    .players{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        padding: 15px;
+        align-items: center;
+        margin-left: 0px;
+        margin-right: 0;
+        grid-gap: 10px;
+        position: relative;
+      }
+      .player {
+        width: 90%;
+        padding: 15px;
+        margin-left: 0;
+    }
+    .sports-info {
+        margin-left: 0; 
+        margin-right: 0;
+        margin-bottom: 0;
+        text-align: center;
+    }
+    .sports-logo img{
+        width: 300px;
+
+    }
+
+  }
