--- a/style.css
+++ b/style.css
@@ -247,8 +247,8 @@ copa-2021 match end
         position: relative;
       }
       .player{
-          height: ;
           width: 70%;
+          height: 494px;
           padding: 20px;
           margin-left: 30px;
          
